--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Start Bootstrap</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Pekçakar — Computer Engineer & Software Developer</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -58,13 +58,18 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">2019 - Present</div>
-                                                <div class="small fw-bolder">Web Developer</div>
-                                                <div class="small text-muted">Stark Industries</div>
-                                                <div class="small text-muted">Los Angeles, CA</div>
+                                                 <div class="text-primary fw-bolder mb-2">Jun 2025 – Jul 2025</div>
+                                                 <div class="small fw-bolder">Software Development Intern</div>
+                                                 <div class="small text-muted">Planet Yazılım</div>
+                                                <div class="small text-muted">Izmir, Turkey</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8">
+                                            <div>
+                                                Designed and implemented an AI-powered error log analysis web system using .NET, Blazor, and Python (Mistral-7B). 
+                                                Automated the grouping and explanation of software errors to enhance debugging efficiency and developer productivity.
+                                             </div>                                        
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -74,13 +79,14 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">2017 - 2019</div>
-                                                <div class="small fw-bolder">SEM Specialist</div>
-                                                <div class="small text-muted">Wayne Enterprises</div>
-                                                <div class="small text-muted">Gotham City, NY</div>
+                                                <div class="text-primary fw-bolder mb-2">Jun 2024 – Jul 2024</div>
+                                                <div class="small fw-bolder">Software Development Intern</div>
+                                                <div class="small text-muted">Dokuz Eylul University</div>
+                                                <div class="small text-muted">Izmir, Turkey</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Developed RESTful APIs and integrated new mealtime functionality into the university’s cafeteria pass system using Python. 
+                                        Focused on data management, usability, and seamless integration within existing infrastructures.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -88,48 +94,59 @@
                         <!-- Education Section-->
                         <section>
                             <h2 class="text-secondary fw-bolder mb-4">Education</h2>
-                            <!-- Education Card 1-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">2015 - 2017</div>
-                                                <div class="mb-2">
-                                                    <div class="small fw-bolder">Barnett College</div>
-                                                    <div class="small text-muted">Fairfield, NY</div>
-                                                </div>
-                                                <div class="fst-italic">
-                                                    <div class="small text-muted">Master's</div>
-                                                    <div class="small text-muted">Web Development</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Education Card 2-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <div class="row align-items-center gx-5">
-                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                                            <div class="bg-light p-4 rounded-4">
-                                                <div class="text-secondary fw-bolder mb-2">2011 - 2015</div>
-                                                <div class="mb-2">
-                                                    <div class="small fw-bolder">ULA</div>
-                                                    <div class="small text-muted">Los Angeles, CA</div>
-                                                </div>
-                                                <div class="fst-italic">
-                                                    <div class="small text-muted">Undergraduate</div>
-                                                    <div class="small text-muted">Computer Science</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
-                                    </div>
-                                </div>
-                            </div>
+                            <!-- Education Card 1 -->
+<div class="card shadow border-0 rounded-4 mb-5">
+    <div class="card-body p-5">
+        <div class="row align-items-center gx-5">
+            <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                <div class="bg-light p-4 rounded-4">
+                    <div class="text-secondary fw-bolder mb-2">Oct 2020 – Aug 2025</div>
+                    <div class="mb-2">
+                        <div class="small fw-bolder">Izmir University of Economics</div>
+                        <div class="small text-muted">Izmir, Turkey</div>
+                    </div>
+                    <div class="fst-italic">
+                        <div class="small text-muted">B.Sc. in Computer Engineering (Full Scholarship)</div>
+                        <div class="small text-muted">GPA: 3.48 / 4.00</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div>
+                    Relevant Coursework: Algorithms, Software Engineering, Database Systems, and Machine Learning. 
+                    Gained experience in developing data-driven and AI-assisted systems through project-based coursework and internships.
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Education Card 2 -->
+<div class="card shadow border-0 rounded-4 mb-5">
+    <div class="card-body p-5">
+        <div class="row align-items-center gx-5">
+            <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                <div class="bg-light p-4 rounded-4">
+                    <div class="text-secondary fw-bolder mb-2">Aug 2023 – Jan 2024</div>
+                    <div class="mb-2">
+                        <div class="small fw-bolder">Riga Technical University</div>
+                        <div class="small text-muted">Riga, Latvia</div>
+                    </div>
+                    <div class="fst-italic">
+                        <div class="small text-muted">Erasmus+ Exchange Program</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <div>
+                    Focused on Object-Oriented Software, Software Maintenance, and Knowledge Management. 
+                    Strengthened international collaboration and technical communication skills while working on team-based projects.
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
                         </section>
                         <!-- Divider-->
                         <div class="pb-5"></div>
