--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Nesibe Nur Pekçakar</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/profile.png" />
+        <link rel="icon" type="image/x-icon" href="assets/searching.png" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Hi, I'm Nesibe</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar — Computer Engineer & Software Developer</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -41,9 +41,9 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Computer Engineering &middot;AI-Integrated Development &middot; Intelligent Systems</div></div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">SOFTWARE DEVELOPMENT &middot; AI-ASSISTED SYSTEMS &middot; DATA-DRIVEN DESIGN</div></div>
                                 <div class="fs-3 fw-light text-muted">I can help your projects and businesses to</div>
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Deliver smarter software solutions, faster</span></h1>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I build reliable, scalable, and intelligent software systems.</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
@@ -56,7 +56,7 @@
                                 <div class="profile bg-gradient-primary-to-secondary">
                                     <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                     <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                    <img class="profile-img" src="assets/profile.png" alt="..." />
+                                    <img class="profile-img" src="assets\profile.png" alt="..." />
                                     <div class="dots-1">
                                         <!-- SVG Dots-->
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 191.6 1215.4" style="enable-background: new 0 0 191.6 1215.4" xml:space="preserve">
@@ -182,9 +182,20 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">My name is Start Bootstrap and I help brands grow.</p>
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
-                                <div class="d-flex justify-content-center fs-2 gap-4">
+                                <p class="lead fw-light mb-4">Hi, I'm Nesibe Nur Pekçakar.</p>
+<p class="text-muted">
+    I am a Computer Engineer with a strong foundation in software development and a growing focus on artificial intelligence. 
+    My academic and internship experiences have allowed me to work across different areas of development — from building RESTful APIs and frontend integrations to experimenting with AI model fine-tuning and automation tools.
+</p>
+<p class="text-muted">
+    I enjoy designing software that is both reliable and adaptable, combining analytical thinking with clean, maintainable code. 
+    During my internships, I contributed to web-based systems that integrated AI for process automation and efficiency, which further strengthened my interest in intelligent system design.
+</p>
+<p class="text-muted">
+    I am currently focused on improving my expertise in backend development, data processing, and AI-assisted solutions. 
+    My goal is to keep growing as a developer who builds practical, scalable, and forward-looking software systems.
+</p>
+<div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
