--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar — Computer Engineer & Software Developer</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar r</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -42,7 +42,6 @@
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">SOFTWARE DEVELOPMENT &middot; AI-ASSISTED SYSTEMS &middot; DATA-DRIVEN DESIGN</div></div>
-                                <div class="fs-3 fw-light text-muted">I can help your projects and businesses to</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I build reliable, scalable, and intelligent software systems.</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
