--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar r</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -188,7 +188,6 @@
 </p>
 <p class="text-muted">
     I enjoy designing software that is both reliable and adaptable, combining analytical thinking with clean, maintainable code. 
-    During my internships, I contributed to web-based systems that integrated AI for process automation and efficiency, which further strengthened my interest in intelligent system design.
 </p>
 <p class="text-muted">
     I am currently focused on improving my expertise in backend development, data processing, and AI-assisted solutions. 
