--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">SOFTWARE DEVELOPMENT &middot; AI-ASSISTED SYSTEMS &middot; DATA-DRIVEN DESIGN</div></div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">SOFTWARE DEVELOPMENT <span class="text-secondary px-2">|</span> AI-ASSISTED SYSTEMS <span class="text-secondary px-2">|</span> DATA-DRIVEN DESIGN</div></div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I build reliable, scalable, and intelligent software systems.</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
