--- a/projects.html
+++ b/projects.html
@@ -34,42 +34,83 @@
                     </div>
                 </div>
             </nav>
-            <!-- Projects Section-->
-            <section class="py-5">
-                <div class="container px-5 mb-5">
-                    <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
-                    </div>
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8">
-                            <!-- Project Card 1-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 1</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                        </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
-                                    </div>
-                                </div>
+            <!-- Projects Section -->
+<section class="py-5">
+    <div class="container px-5 mb-5">
+        <div class="text-center mb-5">
+            <h1 class="display-5 fw-bolder mb-0">
+                <span class="text-gradient d-inline">Projects</span>
+            </h1>
+        </div>
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-11 col-xl-9 col-xxl-8">
+                
+                <!-- Project Card 1 -->
+                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                    <div class="card-body p-0">
+                        <div class="d-flex align-items-center">
+                            <div class="p-5">
+                                <h2 class="fw-bolder">AI Error Log Analyzer</h2>
+                                <p>
+                                    Developed an AI-powered web system that analyzes and explains software error logs. 
+                                    Fine-tuned the Mistral-7B model using real and synthetic data, and implemented the entire system using 
+                                    Python, .NET, and Blazor. The project reduces manual debugging by providing intelligent insights 
+                                    and automated suggestions.
+                                </p>
+                                <p class="text-muted small mb-0">
+                                    <strong>Technologies:</strong> Python · .NET · Blazor · Mistral-7B · LLMs
+                                </p>
                             </div>
-                            <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Project Name 2</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                        </div>
-                                        <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..." />
-                                    </div>
-                                </div>
+                            <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="AI Error Log Analyzer Preview" />
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project Card 2 -->
+                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                    <div class="card-body p-0">
+                        <div class="d-flex align-items-center flex-md-row flex-column-reverse">
+                            <img class="img-fluid" src="https://dummyimage.com/300x400/212529/adb5bd" alt="Prompt Optimizer Preview" />
+                            <div class="p-5">
+                                <h2 class="fw-bolder">Prompt Optimizer</h2>
+                                <p>
+                                    Designed and implemented a personalized prompt optimization system using LLaMA-3B-Instruct with LoRA fine-tuning. 
+                                    Built a Python preprocessing pipeline to enhance model output quality and achieved a 59% improvement in accuracy. 
+                                    The project ranked among the top six at the Graduation and Big Year Fair (GBYF).
+                                </p>
+                                <p class="text-muted small mb-0">
+                                    <strong>Technologies:</strong> Python · LLaMA · LoRA · Hugging Face · Google Colab
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+
+                <!-- Project Card 3 -->
+                <div class="card overflow-hidden shadow rounded-4 border-0">
+                    <div class="card-body p-0">
+                        <div class="d-flex align-items-center">
+                            <div class="p-5">
+                                <h2 class="fw-bolder">Class to Classroom Scheduling System</h2>
+                                <p>
+                                    Built a Java-based classroom scheduling application to automate course-to-room assignments. 
+                                    Implemented manual override features and packaged the system as a Windows executable for offline use. 
+                                    Enhanced scheduling efficiency and reduced administrative workload for academic staff.
+                                </p>
+                                <p class="text-muted small mb-0">
+                                    <strong>Technologies:</strong> Java · JavaFX · Maven
+                                </p>
+                            </div>
+                            <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="Classroom Scheduler Preview" />
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
             <!-- Call to action section-->
             <section class="py-5 bg-gradient-primary-to-secondary text-white">
                 <div class="container px-5 my-5">
