--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
         <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
                 <div class="bg-light p-4 rounded-4">
-                    <div class="text-secondary fw-bolder mb-2">Oct 2020 – Aug 2025</div>
+                    <div class="text-secondary fw-bolder mb-2">Oct 2020 - Aug 2025</div>
                     <div class="mb-2">
                         <div class="small fw-bolder">Izmir University of Economics</div>
                         <div class="small text-muted">Izmir, Turkey</div>
@@ -127,7 +127,7 @@
         <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
                 <div class="bg-light p-4 rounded-4">
-                    <div class="text-secondary fw-bolder mb-2">Aug 2023 – Jan 2024</div>
+                    <div class="text-secondary fw-bolder mb-2">Aug 2023 - Jan 2024</div>
                     <div class="mb-2">
                         <div class="small fw-bolder">Riga Technical University</div>
                         <div class="small text-muted">Riga, Latvia</div>
@@ -151,47 +151,124 @@
                         <!-- Divider-->
                         <div class="pb-5"></div>
                         <!-- Skills Section-->
-                        <section>
-                            <!-- Skillset Card-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
-                                <div class="card-body p-5">
-                                    <!-- Professional skills list-->
-                                    <div class="mb-5">
-                                        <div class="d-flex align-items-center mb-4">
-                                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-tools"></i></div>
-                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Professional Skills</span></h3>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">SEO/SEM Marketing</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Statistical Analysis</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Web Development</div></div>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Network Security</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Adobe Software Suite</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">User Interface Design</div></div>
-                                        </div>
-                                    </div>
-                                    <!-- Languages list-->
-                                    <div class="mb-0">
-                                        <div class="d-flex align-items-center mb-4">
-                                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-code-slash"></i></div>
-                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Languages</span></h3>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">CSS</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JavaScript</div></div>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Ruby</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Node.js</div></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
+                        <!-- Skills Section -->
+<section>
+    <!-- Skillset Card -->
+    <div class="card shadow border-0 rounded-4 mb-5">
+        <div class="card-body p-5">
+
+            <!-- Professional skills list -->
+            <div class="mb-5">
+                <div class="d-flex align-items-center mb-4">
+                    <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+                        <i class="bi bi-tools"></i>
+                    </div>
+                    <h3 class="fw-bolder mb-0">
+                        <span class="text-gradient d-inline">Professional Skills</span>
+                    </h3>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Backend Development</div>
+                    </div>
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">AI Integration & Model Fine-tuning</div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">RESTful API Design</div>
+                    </div>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Web Application Development (.NET · Blazor)</div>
+                    </div>
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Data Processing & Automation</div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Software Design Patterns & OOP</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Technical Stack -->
+            <div class="mb-5">
+                <div class="d-flex align-items-center mb-4">
+                    <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+                        <i class="bi bi-code-slash"></i>
+                    </div>
+                    <h3 class="fw-bolder mb-0">
+                        <span class="text-gradient d-inline">Technical Stack</span>
+                    </h3>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python (Pandas, NumPy, Flask)</div>
+                    </div>
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">C# (.NET, Blazor)</div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Java (JavaFX, Maven)</div>
+                    </div>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Hugging Face Transformers · LLaMA · Mistral-7B</div>
+                    </div>
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">MySQL · SQLite · Oracle SQL</div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Git · GitHub · Agile/Scrum</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Soft Skills -->
+            <div class="mb-0">
+                <div class="d-flex align-items-center mb-4">
+                    <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+                        <i class="bi bi-person-gear"></i>
+                    </div>
+                    <h3 class="fw-bolder mb-0">
+                        <span class="text-gradient d-inline">Soft Skills</span>
+                    </h3>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-3 mb-4">
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Analytical Thinking & Problem Solving</div>
+                    </div>
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Attention to Detail & Code Quality</div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Adaptability & Continuous Learning</div>
+                    </div>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Collaboration & Clear Communication</div>
+                    </div>
+                    <div class="col mb-4 mb-md-0">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Task Ownership & Time Management</div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Curiosity in Emerging AI Technologies</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
                     </div>
                 </div>
             </div>
