--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,6 @@
                         <div class="text-center mb-5">
                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Get in touch</h1>
-                            <p class="lead fw-normal text-muted mb-0">Let's work together!</p>
                         </div>
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
@@ -55,26 +54,11 @@
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
                                   <!-- Contact Info -->
-                  <div class="d-flex align-items-center justify-content-center mb-4">
-                    <i class="bi bi-envelope fs-3 text-primary me-3"></i>
-                    <a href="mailto:nesibepekcakar@example.com" class="text-decoration-none fw-semibold text-dark">
-                      nesibe.pekcakar@gmail.com
-                    </a>
-                  </div>
-
-                  <div class="d-flex align-items-center justify-content-center mb-4">
-                    <i class="bi bi-linkedin fs-3 text-primary me-3"></i>
-                    <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-decoration-none fw-semibold text-dark">
-                      linkedin.com/in/nesibepekcakar
-                    </a>
-                  </div>
-
-                  <div class="d-flex align-items-center justify-content-center mb-4">
-                    <i class="bi bi-github fs-3 text-dark me-3"></i>
-                    <a href="https://github.com/nesibepekcakar" target="_blank" class="text-decoration-none fw-semibold text-dark">
-                      github.com/nesibepekcakar
-                    </a>
-                  </div>
+                  <div class="d-flex justify-content-center fs-2 gap-4">
+                                     <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                </div>
 
                                 <form id="contactForm"   action="https://formspree.io/f/mkgpleob" method="POST">
   <!-- Name input -->
@@ -135,17 +119,12 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; 2025 Nesibe Nur Pekçakar</div></div>
                     <div class="fs-5">
-      <a href="https://github.com/nesibepekcakar" class="text-secondary mx-2"><i class="bi bi-github"></i></a>
-      <a href="https://linkedin.com/in/nesibepekcakar" class="text-secondary mx-2"><i class="bi bi-linkedin"></i></a>
-      <a href="mailto:nesibe.pekcakar@gmail.com" class="text-secondary mx-2"><i class="bi bi-envelope"></i></a>
-                    <div class="col-auto">
-                        <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
-                    </div>
-                </div>
+                        <div class="d-flex justify-content-center fs-2 gap-4">
+                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                        </div>
+                 </div>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
