--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
     My goal is to keep growing as a developer who builds practical, scalable, and forward-looking software systems.
 </p>
 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                     <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -209,14 +209,13 @@
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; 2025 Nesibe Nur Pekçakar</div></div>
-                    <div class="col-auto">
-                        <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
-                    </div>
-                </div>
+                    <div class="fs-5">
+                        <div class="d-flex justify-content-center fs-2 gap-4">
+                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                        </div>
+                 </div>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
