projects photos added

--- a/index.html
+++ b/index.html
@@ -193,11 +193,6 @@
     I am currently focused on improving my expertise in backend development, data processing, and AI-assisted solutions. 
     My goal is to keep growing as a developer who builds practical, scalable, and forward-looking software systems.
 </p>
-<div class="d-flex justify-content-center fs-2 gap-4">
-                                     <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -211,7 +206,7 @@
                     <div class="col-auto"><div class="small m-0">Copyright &copy; 2025 Nesibe Nur Pekçakar</div></div>
                     <div class="fs-5">
                         <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
                                     <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                                     <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                         </div>
