--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                                     <strong>Technologies:</strong> Python · .NET · Blazor · Mistral-7B · LLMs
                                 </p>
                             </div>
-                            <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="AI Error Log Analyzer Preview" />
+                            <img class="img-fluid" src="assets\project\aierror.PNG" alt="AI Error Log Analyzer Preview" />
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                 <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                     <div class="card-body p-0">
                         <div class="d-flex align-items-center flex-md-row flex-column-reverse">
-                            <img class="img-fluid" src="https://dummyimage.com/300x400/212529/adb5bd" alt="Prompt Optimizer Preview" />
+                            <img class="img-fluid" src="assets\project\aipromt.png" alt="Prompt Optimizer Preview" />
                             <div class="p-5">
                                 <h2 class="fw-bolder">Prompt Optimizer</h2>
                                 <p>
@@ -101,7 +101,7 @@
                                     <strong>Technologies:</strong> Java · JavaFX · Maven
                                 </p>
                             </div>
-                            <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="Classroom Scheduler Preview" />
+                            <img class="img-fluid" src="assets\project\assignment.png" alt="Classroom Scheduler Preview" />
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                     <div class="col-auto"><div class="small m-0">Copyright &copy; 2025 Nesibe Nur Pekçakar</div></div>
                     <div class="fs-5">
                         <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
                                     <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                                     <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                         </div>
