--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
                     <!-- Contact form-->
                     <div class="bg-light rounded-4 py-5 px-4 px-md-5">
                         <div class="text-center mb-5">
-                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
-                            <h1 class="fw-bolder">Get in touch</h1>
+                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"></div>
+                            <h1 class="fw-bolder">Let's get in touch</h1>
                         </div>
                         <div class="row gx-5 justify-content-center">
                             <div class="col-lg-8 col-xl-6">
