--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
     <div class="invalid-feedback">A name is required.</div>
   </div>
 
-  <!-- Email address input -->
+  <!-- Email address input bruhhh -->
   <div class="form-floating mb-3">
     <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" required />
     <label for="email">Email address</label>
