--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <meta name="author" content />
         <title>Nesibe Nur Pekçakar-Contact Me</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets\favicon.ico" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -117,7 +117,6 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; 2025 Nesibe Nur Pekçakar</div></div>
                     <div class="fs-5">
                         <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
@@ -125,6 +124,8 @@
                                     <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                         </div>
                  </div>
+                                     <div class="col-auto"><div class="small m-0">Copyright &copy; 2025 Nesibe Nur Pekçakar</div></div>
+
             </div>
         </footer>
         <!-- Bootstrap core JS-->
