--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
     <body class="d-flex flex-column h-100 bg-light">
         <main class="flex-shrink-0">
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light py-3 navbar-gradient">
+            <nav class="navbar navbar-expand-lg navbar-light py-2 navbar-gradient">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Nesibe Nur Pekçakar</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -49,7 +49,7 @@
                 <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                     <div class="card-body p-0">
                         <div class="d-flex align-items-center">
-                            <div class="p-5">
+                            <div class="p-5 w-60">
                                 <h2 class="fw-bolder">AI Error Log Analyzer</h2>
                                 <p>
                                     Developed an AI-powered web system that analyzes and explains software error logs. 
@@ -71,7 +71,7 @@
                     <div class="card-body p-0">
                         <div class="d-flex align-items-center flex-md-row flex-column-reverse">
                             <img class="img-fluid" src="assets\project\aipromt.png" alt="Prompt Optimizer Preview" />
-                            <div class="p-5">
+                            <div class="p-5 w-60">
                                 <h2 class="fw-bolder">Prompt Optimizer</h2>
                                 <p>
                                     Designed and implemented a personalized prompt optimization system using LLaMA-3B-Instruct with LoRA fine-tuning. 
@@ -90,7 +90,7 @@
                 <div class="card overflow-hidden shadow rounded-4 border-0">
                     <div class="card-body p-0">
                         <div class="d-flex align-items-center">
-                            <div class="p-5">
+                            <div class="p-5 w-60">
                                 <h2 class="fw-bolder">Class to Classroom Scheduling System</h2>
                                 <p>
                                     Built a Java-based classroom scheduling application to automate course-to-room assignments. 
