--- a/projects.html
+++ b/projects.html
@@ -139,9 +139,7 @@
           <strong>Technologies:</strong> Python · Pandas · NumPy · Scikit-learn
         </p>
       </div>
-      <div class="project-img-container">
-        <img class="img-fluid" src="assets/project/dataprep.png" alt="Preprocessing Data Preview" />
-      </div>
+      
     </div>
   </div>
 </div>
@@ -159,9 +157,7 @@
         </p>
         <a href="https://huggingface.co/nesibnnur" target="_blank" class="btn btn-sm btn-primary mt-3">View on Hugging Face</a>
       </div>
-      <div class="project-img-container">
-        <img class="img-fluid" src="assets/project/colabtrain.png" alt="Model Training Preview" />
-      </div>
+     
     </div>
   </div>
 </div>
@@ -181,6 +177,12 @@
                             <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
                             <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                             <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                            <a href="https://huggingface.co/nesibnnur" target="_blank" class="text-gradient">
+        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 1024 1024">
+            <path d="M512 0C229.41 0 0 229.41 0 512c0 282.59 229.41 512 512 512s512-229.41 512-512C1024 229.41 794.59 0 512 0zm0 921.6c-225.84 0-409.6-183.76-409.6-409.6S286.16 102.4 512 102.4s409.6 183.76 409.6 409.6-183.76 409.6-409.6 409.6z"/>
+            <path d="M512 307.2c-56.51 0-102.4 45.89-102.4 102.4s45.89 102.4 102.4 102.4 102.4-45.89 102.4-102.4-45.89-102.4-102.4-102.4zM512 563.2c-157.06 0-281.6 109.84-281.6 245.76h563.2c0-135.92-124.54-245.76-281.6-245.76z"/>
+        </svg>
+    </a>
                         </div>
                     </div>
                 </div>
