--- a/projects.html
+++ b/projects.html
@@ -179,7 +179,7 @@
                             <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
                             <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                             <a href="https://huggingface.co/nesibnnur" target="_blank" class="text-gradient">
-        <i class="fa-brands fa-hive"></i>
+        <i class="fa-brands fa-huggingface"></i>
     </a>
                         </div>
                     </div>
