--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
                 <span class="text-gradient d-inline">Experience</span>
             </h3>
         </div>
-        <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf">
+        <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf"target="_blank">
             <div class="d-inline-block bi bi-download me-2"></div>
             Download Resume
         </a>
@@ -278,6 +278,12 @@
 
         </div>
     </div>
+  <div class="d-flex align-items-center">
+    <a class="btn btn-primary px-4 py-3" href="assets\NesibeNurPekcakar_CV.pdf" target="_blank">
+        <div class="d-inline-block bi bi-download me-2"></div>
+        Download Resume
+    </a>
+</div>
 </section>
 
                     </div>
@@ -291,8 +297,8 @@
                     <div class="fs-5">
                         <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
-                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar" target="_blank" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar"target="_blank" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                         </div>
                  </div>
 
