--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script src="js/scripts.js"></script>
     </head>
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
@@ -56,11 +57,12 @@
                                   <!-- Contact Info -->
                   <div class="d-flex justify-content-center fs-2 gap-4">
                                      <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
-                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar"target="_blank" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                                 </div>
 
                                 <form id="contactForm"   action="https://formspree.io/f/mkgpleob" method="POST">
+                                  
   <!-- Name input -->
   <div class="form-floating mb-3">
     <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
@@ -103,6 +105,7 @@
 
   <!-- Submit Button -->
   <div class="d-grid">
+    <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
     <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Send Message</button>
   </div>
 </form>
@@ -120,8 +123,8 @@
                     <div class="fs-5">
                         <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
-                                    <a href="https://linkedin.com/in/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a href="https://github.com/nesibepekcakar" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                         </div>
                  </div>
             </div>
