--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,7 @@
                                     <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                                 </div>
 
-                                <form id="contactForm"   action="https://formspree.io/f/mkgpleob" method="POST">
-                                  
+<form id="contactForm" method="POST" data-sb-form-api-token="mkgpleob">                                  
   <!-- Name input -->
   <div class="form-floating mb-3">
     <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
@@ -105,7 +104,6 @@
 
   <!-- Submit Button -->
   <div class="d-grid">
-    <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off" />
     <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Send Message</button>
   </div>
 </form>
