--- a/projects.html
+++ b/projects.html
@@ -141,7 +141,7 @@
         </p>
       </div>
       <div class="project-img-container">
-                            <img class="img-fluid" src="assets\project\preproccessing.png" alt="Preprocessing" />
+                            <img class="img-fluid" src="assets\project\preproccesing.png" alt="Preprocessing" />
                         </div>
       
     </div>
