--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
                         <!-- Experience Section-->
                         <section>
-                            <<div class="d-flex align-items-center justify-content-between mb-4">
+                            <div class="d-flex align-items-center justify-content-between mb-4">
         <div class="d-flex align-items-center">
             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
                 <i class="bi bi-briefcase"></i> 
