--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                                     <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                                 </div>
 
-<form id="contactForm" method="POST" data-sb-form-api-token="mkgpleob">                                  
+                                <form id="contactForm"   action="https://formspree.io/f/mkgpleob" method="POST">
   <!-- Name input -->
   <div class="form-floating mb-3">
     <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
