--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,8 @@
         <p class="text-muted small mb-0">
           <strong>Technologies:</strong> Python · .NET · Blazor · Hugging Face · Mistral-7B · TinyLLaMA · PEFT · Google Colab · wandb · JSONL
         </p>
+                <a href="https://github.com/nesibePekcakar/ModelTraining_ErrorExplainer" target="_blank" class="btn btn-sm btn-primary mt-3">View the Source Code</a>
+
                             </div>
 
                         <div class="project-img-container">
@@ -96,6 +98,8 @@
         <p class="text-muted small mb-0">
           <strong>Technologies:</strong> Python · HTML · OpenAI API · Flask · JavaScript · Prompt Engineering · Dataset Curation
         </p>
+                        <a href="https://github.com/nesibePekcakar/PromptOptimizer-GradProject" target="_blank" class="btn btn-sm btn-primary mt-3">View the Source Code</a>
+
                              </div>
                         
                         <div class="project-img-container">
@@ -120,6 +124,8 @@
                                 <p class="text-muted small mb-0">
                                     <strong>Technologies:</strong> Java · JavaFX · Maven
                                 </p>
+                                                <a href="https://github.com/nesibePekcakar/SE302Project" target="_blank" class="btn btn-sm btn-primary mt-3">View the Source Code</a>
+
                             </div>
                         
                         <div class="project-img-container">
@@ -140,8 +146,10 @@
           Ensured data consistency, reduced noise, and improved model accuracy through advanced text normalization and tokenization techniques.
         </p>
         <p class="text-muted small mb-0">
-          <strong>Technologies:</strong> Python · Pandas · NumPy · Scikit-learn
+          <strong>Technologies:</strong> Python · Pandas · NumPy · Scikit-learn  · Gemini API  · Google Collab
         </p>
+                        <a href="https://github.com/nesibePekcakar/PreprocessingData" target="_blank" class="btn btn-sm btn-primary mt-3">View the Source Code</a>
+
       </div>
       <div class="project-img-container">
                             <img class="img-fluid" src="assets\project\preproccesing.png" alt="Preprocessing" />
