contact section updated hover

--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,18 @@
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
                                   <!-- Contact Info -->
-                  <div class="d-flex justify-content-center fs-2 gap-4">
-                                     <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
-                                    <a href="https://linkedin.com/in/nesibepekcakar"target="_blank" class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a href="https://github.com/nesibepekcakar" target="_blank" class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
-                                </div>
+                  <footer class="bg-white py-4 mt-auto">
+            <div class="container px-5">
+                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                    <div class="fs-5">
+                        <div class="d-flex justify-content-center fs-2 gap-4">
+                                    <a href="mailto:nesibe.pekcakar@gmail.com" class="text-gradient" href="#!"><i class="bi bi-envelope"></i></a>
+                                    <a href="https://linkedin.com/in/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://github.com/nesibepekcakar" target="_blank"class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                        </div>
+                 </div>
+            </div>
+        </footer>
 
                                 <form id="contactForm"   action="https://formspree.io/f/mkgpleob" method="POST">
   <!-- Name input -->
