--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
                                   <!-- Contact Info -->
-                  <footer class="bg-white py-4 mt-auto" style="background-color: #f8f9fa">
+                  <footer class="bg-light py-4 mt-auto" style="background-color: #f8f9fa">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="fs-5">
