--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
@@ -52,7 +53,7 @@
   </div>
 </div>
 
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I build reliable, scalable, and intelligent software systems.</span></h1>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">I build intelligent, adaptive, and well-crafted software systems.</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
@@ -193,15 +194,17 @@
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">Hi, I'm Nesibe Nur Pekçakar.</p>
 <p class="text-muted">
-    I am a Computer Engineer with a strong foundation in software development and a growing focus on artificial intelligence. 
-    My academic and internship experiences have allowed me to work across different areas of development — from building RESTful APIs and frontend integrations to experimenting with AI model fine-tuning and automation tools.
+    I’m a Computer Engineer passionate about building practical,well-designe and intelligent systems. 
+    My experience includes AI-assisted development, backend engineering, REST API design, and integrating model fine-tuning workflows into real applications.
+
 </p>
 <p class="text-muted">
-    I enjoy designing software that is both reliable and adaptable, combining analytical thinking with clean, maintainable code. 
-</p>
+At my core, I’m disciplined, curious, and committed to clarity, quality, and thoughtful execution in every project I build.
+I approach problems with an organized mindset, always aiming to deliver solutions that are both technically robust and genuinely useful.</p>
 <p class="text-muted">
-    I am currently focused on improving my expertise in backend development, data processing, and AI-assisted solutions. 
-    My goal is to keep growing as a developer who builds practical, scalable, and forward-looking software systems.
+While I enjoy working with AI-powered software, my general goal is to develop reliable, user-oriented software products across multiple domains.
+I am at heart driven by solving real-world problems, understanding system behavior, and building technologies that truly make a difference.
+
 </p>
                             </div>
                         </div>
